トーク用のAPIを作成 (#55)
